name:                blowers
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ingars Jekabsons
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
   exposed-modules:
                    Constant
                  , Identity
                  , Either
                  , Maybe
                  , List
                  , Validation
  build-depends:       base
                      , QuickCheck
                      , checkers
  hs-source-dirs:      src
  default-language:    Haskell2010
